fixed overflow-x issue for smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,11 @@ html::-webkit-scrollbar,
 body::-webkit-scrollbar {
   display: none;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   -ms-overflow-style: none;
   scrollbar-width: none;
